// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav should match the snapshot 1`] = `
<div>
  <div
    className="nav"
  >
    <section
      className="nav-wrapper"
    >
      <input
        checked={false}
        className="nav-toggle"
        id="hamburger"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="hamburger"
      >
        <div
          className="bar nav-top"
        />
        <div
          className="bar nav-middle"
        />
        <div
          className="bar nav-bottom"
        />
      </label>
    </section>
    <h3>
       
      <span>
        Pocket
      </span>
       Ramiro
    </h3>
    <NavLink
      className="nav-login"
      to="/login"
    >
      <i
        class="material-icons"
      >
        account_circle
      </i>
      Log in
    </NavLink>
  </div>
  <section
    className="mobile-menu"
  />
</div>
`;

exports[`Nav should render a Nav component if isSelected is true 1`] = `
<div>
  <div
    className="nav"
  >
    <section
      className="nav-wrapper"
    >
      <input
        checked={
          Object {
            "isSelected": Object {
              "isSelected": true,
            },
          }
        }
        className="nav-toggle"
        id="hamburger"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="hamburger"
      >
        <div
          className="bar nav-top"
        />
        <div
          className="bar nav-middle"
        />
        <div
          className="bar nav-bottom"
        />
      </label>
    </section>
    <h3>
       
      <span>
        Pocket
      </span>
       Ramiro
    </h3>
    <NavLink
      className="nav-login"
      to="/login"
    >
      <i
        class="material-icons"
      >
        account_circle
      </i>
      Log in
    </NavLink>
  </div>
  <section
    className="mobile-menu"
  >
    <section
      id="menu"
      onClick={[Function]}
    >
      <NavLink
        className="nav-link"
        name="Tickets"
        to="/tickets"
      >
        <i
          className="material-icons menu-icons"
        >
           insert_chart
        </i>
        Tickets
      </NavLink>
      <NavLink
        className="nav-link"
        name="resources"
        to="/resources"
      >
        <i
          className="material-icons menu-icons"
        >
           insert_chart
        </i>
        Assets
      </NavLink>
      <NavLink
        className="nav-link"
        name="Parts"
        to="/parts"
      >
        <i
          className="material-icons menu-icons"
        >
           business_center
        </i>
        Parts
      </NavLink>
      <NavLink
        className="nav-link"
        name="Companies"
        to="/companies"
      >
        <i
          className="material-icons menu-icons"
        >
           business 
        </i>
        Companies
      </NavLink>
    </section>
  </section>
</div>
`;
